discussion/kv_engine/137161/137161_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39292: 1/n set_collections persist current manifest

set_collections only allows 'forward' progress after checking
that the new manifest is a successor of the current manifest,
however after warm-up we have to accept whatever we are given.

This commit updates set_collections so that for persistent buckets
the new manifest is first stored in the database directory and
then we update from that manifest on-success, now warm-up brings
the manifest back from storage and we can validate that further
updates are a valid successor.

Ephemeral buckets just update with no background task.

This patch stores using Manifest::toJSON and reloads JSON using
Manifest's existing construction with no integrity checking.

Change-Id: Ie548e31f56c4847ecf4c0c4ad866544f6bcd2a5c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-10-07 10:11:33.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-10-07 10:11:46.000000000
Message: 
Patch Set 9:

(3 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-10-07 10:25:04.000000000
Message: 
Patch Set 9: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-07 11:41:26.000000000
Message: 
Patch Set 9: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4932/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4932/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4932/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30939/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30939/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6465/ : FAILURE

Failure of a CTest test [2020-10-07T11:01:01.337Z]  19/388 Test #227: ep_testsuite.value_eviction.comp_passive ....................................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6465/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3460/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26730/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14128/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5309/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6235/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6352/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-07 12:49:23.000000000
Message: 
Patch Set 9:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4932/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4932/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/tasks.def.h:31:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4932/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3460/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26730/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6478/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14128/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5309/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6235/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6352/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30960/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-10-07 14:16:07.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-10-07 14:16:28.000000000
Message: 
Patch Set 9: Verified+1

override clang-tidy which doesn't like tasks.def.h
----------------------------------------------------------------------------------------------------------------------
